01-09-2007  -  0.1.3
--------------------
 * /recall now allows users to search for specific lines by time and contents.
   See the README for details.
 * New option; autoreconnect will cause mooproxy to reconnect when it loses
   the connection to the server.
 * New option; newinfostring allows users to use a custom prefix for "New
   lines" and all related messages. This should make it easier to spot those
   lines when the client connects.
 * Setting the listenport option from within mooproxy is now allowed, and
   actually attempts to rebind to the new port.
 * Context lines produced when connecting now have the ASCII BELL character
   filtered from them, so you won't hear a sound from old lines.
 * Tab characters are now included in the logs instead of being discarded.
 * Improved logging performance.
 * Fixed a file descriptor leak on server hostname resolve.
 * Fixed a small bug that sometimes caused the timestamps in the logfiles to
   be off by one second.
 * Fixed a small bug where mooproxy would sometimes say "No new lines" instead
   of "End of new lines".


05-03-2007  -  0.1.2
--------------------
 * Context/history/new lines got a makeover. On connect, the user now gets
   context lines, possibly new lines, and certainly new lines.
 * max_buffered_size and max_history_size are replaced by max_buffer_size.
 * Logfiles are now stored in a hierarchy; logs/$worldname/YYYY-MM.
   Use the update-logs.sh script to update your logfiles' locations.
   Users of the Debian package can find the script in /usr/share/doc/mooproxy.
 * Mooproxy now requires colors in the infostring to be specified using
   mooproxy color sequences (see ExampleConfig for details).
 * Added timestamped_logs option, which prepends a timestamp to logged lines.
 * Added max_logbuffer_size option, to limit the amount of unlogged lines.
 * Mooproxy now creates 'today' and 'yesterday' logfile symlinks for each world.
 * Logfiles are now synced to disk every minute.