@@ -1,3 +1,7 @@
+- autoreconnect setten vanuit user heeft nu onmiddelijk effect
+
+
+
 01-09-2007  -  0.1.3
 --------------------
  * /recall now allows users to search for specific lines by time and contents.
